# Orchestrix

./: README.md  main.py  pyproject.toml
app/: main.py
app/agents/: compression.py  critique.py  decomposition.py  rag_agent.py  synthesis.py
app/core/: config.py  context_manager.py  llm.py  orchestrator.py
app/db/: models.py  sessions.py
app/eval/: cases.json  harness.py  meta_optimizer.py
app/schemas/: shared_context.py
app/tools/: base.py  code_sandbox.py  db_lookup.py  search.py  self_reflection.py
docker/: Dockerfile  docker-compose.yml
