[project]
name = "mega-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.0",
    "sqlmodel>=0.0.38",
    "sse-starlette>=3.4.2",
    "tiktoken>=0.12.0",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "isort>=8.0.1",
    "pytest>=9.0.3",
]
